--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 </head>
 <body>
 
-    <header>
-        <nav>
+<header>
+    <div class="container">
+        <div class="logo">Ваш Логотип</div>
+        <button class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <nav class="mobile-nav">
             <ul>
                 <li><a href="#about">Обо мне</a></li>
                 <li><a href="#portfolio">Портфолио</a></li>
                 <li><a href="#contact">Контакты</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
+</header>
 
     <section id="hero" class="hero">
         <div class="hero-content">
@@ -77,13 +85,13 @@
             <p><i class="fas fa-phone"></i> +79522838755</p>
             <p><i class="fas fa-map-marker-alt"></i> Санкт-Петербург, Россия</p>
         </div>
-        <!-- Форма обратной связи (опционально) -->
-        <!-- <form class="contact-form">
+
+        <form class="contact-form">
             <input type="text" name="name" placeholder="Ваше имя" required>
             <input type="email" name="email" placeholder="Ваш email" required>
             <textarea name="message" placeholder="Сообщение" required></textarea>
             <button type="submit">Отправить</button>
-        </form> -->
+        </form>
     </section>
 
     <footer>
