--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <header>
     <div class="container">
-        <div class="logo">Ваш Логотип</div>
+        <div class="logo"><img src="img/logo.png" alt="Логотип"></div>
         <button class="menu-toggle">
             <span></span>
             <span></span>
             <span></span>
         </button>
         <nav class="mobile-nav">
-            <ul>
+            </ul>
                 <li><a href="#about">Обо мне</a></li>
                 <li><a href="#portfolio">Портфолио</a></li>
                 <li><a href="#contact">Контакты</a></li>
