--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                 <p>Чат-бот для геймеров. Поиск команды, гайд и последние новости индустрии видеоигр</p>
                 <a href="https://github.com/loxno92/Gamers-python-bot" target="_blank">Посмотреть проект</a>
             </div>
+                <div class="portfolio-item">
+                <img src="img/project4-thumb.jpg" alt="Проект 4">
+                <h3>Чат-бот для школы</h3>
+                <p>Бот предназначен для помощи ученикам учебных заведений в организации учебного процесса. Предоставляет функционал для хранения и вывода расписания уроков, домашних заданий, а также обратной связи с администратором.</p>
+                <a href="https://github.com/loxno92/School-bot" target="_blank">Посмотреть проект</a>
+            </div>
         </div>
     </section>
 
@@ -82,7 +88,7 @@
         <p>Свяжитесь со мной, чтобы обсудить ваш проект или просто поздороваться!</p>
         <div class="contact-info">
             <p><i class="fas fa-envelope"></i> <a href="mailto:[ваша_почта]">morozovichnikita@gmail.com</a></p>
-            <p><i class="fas fa-phone"></i> +79522838755</p>
+            <p><i class="fas fa-phone"></i> +7xxxxxxxxxx</p>
             <p><i class="fas fa-map-marker-alt"></i> Санкт-Петербург, Россия</p>
         </div>
 
